// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Appearance 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-evZas ikePYp"
    style={
      Object {
        "background": "#EFF0F6",
        "padding": 50,
      }
    }
  >
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Primary Button
        </h3>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi eJlJy hUuZHN"
          data-element="button"
          size="medium"
          variant="medium"
        >
          Button
        </button>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi eJlJy hUuZHN"
          data-element="button"
          disabled={true}
          size="medium"
          variant="medium"
        >
          Disabled
        </button>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Primary Ghost (Transparent)
        </h3>
        <button
          appearance="primary-ghost"
          className="sc-bczRLJ sc-eCYdqJ eJlJy iokKVj"
          data-element="button"
          size="medium"
          variant="medium"
        >
          Button
        </button>
        <button
          appearance="primary-ghost"
          className="sc-bczRLJ sc-eCYdqJ eJlJy iokKVj"
          data-element="button"
          disabled={true}
          size="medium"
          variant="medium"
        >
          Disabled
        </button>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Secondary Button
        </h3>
        <button
          appearance="secondary"
          className="sc-bczRLJ sc-dkzDqf lkrVFr jAJShP"
          data-element="button"
          size="medium"
          variant="medium"
        >
          Button
        </button>
        <button
          appearance="secondary"
          className="sc-bczRLJ sc-dkzDqf lkrVFr jAJShP"
          data-element="button"
          disabled={true}
          size="medium"
          variant="medium"
        >
          Disabled
        </button>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Dark Button
        </h3>
        <button
          appearance="dark"
          className="sc-bczRLJ sc-hKMtZM eJlJy epibiZ"
          data-element="button"
          size="medium"
          variant="medium"
        >
          Button
        </button>
        <button
          appearance="dark"
          className="sc-bczRLJ sc-hKMtZM eJlJy epibiZ"
          data-element="button"
          disabled={true}
          size="medium"
          variant="medium"
        >
          Disabled
        </button>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Gradient Button
        </h3>
        <button
          appearance="gradient"
          className="sc-bczRLJ sc-jSMfEi eJlJy kZGRMy"
          data-element="button"
          size="medium"
          variant="medium"
        >
          Button
        </button>
        <button
          appearance="gradient"
          className="sc-bczRLJ sc-jSMfEi eJlJy kZGRMy"
          data-element="button"
          disabled={true}
          size="medium"
          variant="medium"
        >
          Disabled
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Components/Button Custom sizes 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-evZas ikePYp"
  >
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Small
        </h3>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi jiAPcv hUuZHN"
          data-element="button"
          size="small"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Medium
        </h3>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi eJlJy hUuZHN"
          data-element="button"
          size="medium"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Large
        </h3>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi efEZdu hUuZHN"
          data-element="button"
          size="large"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Full width
        </h3>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi fSOGxl hUuZHN u-full-width"
          data-element="button"
          size="medium"
          variant="large"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Fit content
        </h3>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi liYCpq hUuZHN u-fit-content-width"
          data-element="button"
          size="medium"
          variant="large"
        >
          Button
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Components/Button Details 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-evZas ikePYp"
  >
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Button
        </h3>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi eJlJy hUuZHN"
          data-element="button"
          disabled={false}
          size="medium"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Components/Button Icon 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-evZas ikePYp"
    style={
      Object {
        "background": "#EFF0F6",
        "padding": 50,
      }
    }
  >
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Primary Button
        </h3>
        <section
          className="sc-crXcEl ljWuVV css-1btod5z"
        >
          <button
            appearance="primary"
            className="sc-bczRLJ sc-gsnTZi ikSyLA hUuZHN"
            data-element="button"
            icon="settings"
            size="large"
            variant="large"
          />
          <button
            appearance="primary"
            className="sc-bczRLJ sc-gsnTZi gzGeBe hUuZHN"
            data-element="button"
            icon="settings"
            size="medium"
            variant="medium"
          />
        </section>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Primary Ghost (Transparent)
        </h3>
        <section
          className="sc-crXcEl ljWuVV css-1btod5z"
        >
          <button
            appearance="primary-ghost"
            className="sc-bczRLJ sc-eCYdqJ ikSyLA kswtPl"
            data-element="button"
            icon="settings"
            size="large"
            variant="large"
          />
          <button
            appearance="primary-ghost"
            className="sc-bczRLJ sc-eCYdqJ gzGeBe kswtPl"
            data-element="button"
            icon="settings"
            size="medium"
            variant="medium"
          />
        </section>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Secondary Button
        </h3>
        <section
          className="sc-crXcEl ljWuVV css-1btod5z"
        >
          <button
            appearance="secondary"
            className="sc-bczRLJ sc-dkzDqf gvqjbo XLAxE"
            data-element="button"
            icon="settings"
            size="large"
            variant="large"
          />
          <button
            appearance="secondary"
            className="sc-bczRLJ sc-dkzDqf bMrUTi XLAxE"
            data-element="button"
            icon="settings"
            size="medium"
            variant="medium"
          />
        </section>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Dark Button
        </h3>
        <section
          className="sc-crXcEl ljWuVV css-1btod5z"
        >
          <button
            appearance="dark"
            className="sc-bczRLJ sc-hKMtZM ikSyLA epibiZ"
            data-element="button"
            icon="settings"
            size="large"
            variant="large"
          />
          <button
            appearance="dark"
            className="sc-bczRLJ sc-hKMtZM gzGeBe epibiZ"
            data-element="button"
            icon="settings"
            size="medium"
            variant="medium"
          />
        </section>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Gradient Button
        </h3>
        <section
          className="sc-crXcEl ljWuVV css-1btod5z"
        >
          <button
            appearance="gradient"
            className="sc-bczRLJ sc-jSMfEi ikSyLA kZGRMy"
            data-element="button"
            icon="settings"
            size="large"
            variant="large"
          />
          <button
            appearance="gradient"
            className="sc-bczRLJ sc-jSMfEi gzGeBe kZGRMy"
            data-element="button"
            icon="settings"
            size="medium"
            variant="medium"
          />
        </section>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Components/Button Variants 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-evZas ikePYp"
  >
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Thin
        </h3>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi iPCVwL hUuZHN"
          data-element="button"
          size="medium"
          variant="thin"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Medium
        </h3>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi eJlJy hUuZHN"
          data-element="button"
          size="medium"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-crXcEl hvhnAl"
      span={4}
    >
      <div
        className="sc-jqUVSM iYAuYG"
        gap={1}
      >
        <h3
          className="sc-breuTD hkngaO c-text--heading-3"
        >
          Large
        </h3>
        <button
          appearance="primary"
          className="sc-bczRLJ sc-gsnTZi bycoCV hUuZHN"
          data-element="button"
          size="medium"
          variant="large"
        >
          Button
        </button>
      </div>
    </section>
  </div>
</div>
`;
